Deployment: Prepared project for full deployment (Production URL, relative paths, CORS allowed origins)